<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Counter</string>
    <string name="defaultCounterName">Counter</string>
    
    <!-- Tab fragment names -->
    <string name="counter">Counter</string>
    <string name="saved_counters">Saved Counters</string>
    <string name="summary">Summary</string>
    
    <!-- Button choices -->
    <string name="changeDateViewStyle">Change Display Preferences</string>
    
    <!-- Date localaization -->
    <string name="month_of">Month of</string>
    <string name="week_of">Week of</string>
    
    <!-- Toast messages -->
    <string name="defaultCounterMessage">A default counter has been created for you.</string>
    
    <!-- General strings used in multiple views and the action bar -->
    <string name="deleteCounter">Delete counter</string>
    <string name="resetCount">Reset Counter</string>
	<string name="renameCounter">Rename Counter</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
	<string name="newCounter">New Counter</string>
    
    <!-- Strings for the counter tab -->
    <string name="increment">+1</string>
    <string name="decrement">-1</string>
    <string name="nameHint">Enter a counter name</string>
    <string name="countDisplayHint">Current count</string>
    <string name="counterName">NameMePlease</string>
    
    
    <!-- Strings for alert dialog fragments -->
    <string name="confirm">Yes</string>
    <string name="decline">No</string>
    <string name="message">Are you sure?</string>
    <string name="resetQuestion">Are you sure you want to reset the current counter?</string>
    <string name="deleteQuestion">Do you want to delete the current counter?</string>
    <string name="deleteAndDefault">Since no open counters exist after deletion, a default counter has been created.</string>
    <string name="deleted">The counter has been deleted</string>
    <string name="createCounter">Enter a counter name</string>
    <string name="RenameCounterMessage">Enter a new counter name</string>
    <string name="renamed">The counter has been renamed</string>
	<string name="counterCreated">A new counter has been created</string>
	<string name= "changeView">Display counts by:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete Counter</string>
    <string name="reset">Reset</string>
    
    <!-- Help menu dialog -->
    <string name="helpReset">Reset current counter</string>
    <string name="helpRename">Rename current counter</string>
    <string name="helpNewCounter">Create and switch to new counter</string>
    <string name="helpDelete">Deletes current counter</string>
    <string name="helpHelp">Brings up the help menu</string>
    
</resources>
