<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Reset the counter -->
	<item android:id="@+id/reset_counter"
	      android:icon="@android:drawable/ic_menu_revert"
	      android:title="@string/resetCount"
	      android:showAsAction="always" />
    
    <!--  Rename the counter -->
	<item android:id="@+id/rename_counter"
	      android:icon="@android:drawable/ic_menu_edit"
	      android:title="@string/renameCounter"
	      android:showAsAction="always" />
	
	<!-- Create a new counter -->
	<item android:id="@+id/new_counter"
	      android:icon="@android:drawable/ic_menu_add"
	      android:title="@string/newCounter"
	      android:showAsAction="always" />    
    
    <!-- Delete the current count -->
    <item android:id="@+id/counter_delete"
          android:icon="@android:drawable/ic_menu_delete"
          android:title="@string/deleteCounter"
          android:showAsAction="always" />
    
    <!-- Help -->
    <item android:id="@+id/help"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/help"
          android:showAsAction="always" />

</menu>
