<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:longClickable="false"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".CounterFragment" >

    <TextView
        android:id="@+id/counterNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:gravity="center"
        android:text="@string/counterName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/countDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.60"
        android:clickable="false"
        android:gravity="center"
        android:hint="@string/countDisplayHint"
        android:longClickable="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/incrementBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.00"
        android:text="@string/increment" 
        android:layout_gravity="center" />

    <Button
        android:id="@+id/decrementBtn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.20"
        android:text="@string/decrement" 
        android:layout_gravity="center"/>

</LinearLayout>